2006-04-03  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/_ImgManip.py: fix typo
	* src/plugins/DetDescendantReport.py: remove use of deprecated functions
	* src/plugins/DescendReport.py: fix death dates

2006-04-02  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py: Fix place autocompletion
	* src/glade/gramps.glade: start of LDS Ord editor

2006-04-01  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: dbstate.active fixes
	* src/GrampsDb/_GrampsDbBase.py: dbstate.active fixes
	* src/Exporter.py: dbstate.active fixes
	* src/RelLib/_DateBase.py: remove unused stuff 
	* src/DisplayState.py: Remove managed window
	* src/PluginUtils/_ReportUtils.py: fix check
	* src/PageView.py: dbstate.active fixes
	* src/ManagedWindow.py: add assertions
	* autogen.sh: require automake 1.9

2006-04-01  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/PluginUtils/_ReportUtils.py: remove use of deprecated functions
	* src/plugins/NavWebPage.py: various fixes - should work now
	* src/plugins/FamilyGroup.py: various fixes, add Marriage info

2006-04-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Work around the bug of
	dbstate.active not being updated when the active person was edited.
	* src/DisplayTabs.py (EventEmbedList.edit_button_clicked): Fix params
	of EditEventRef call

2006-03-31  Don Allingham  <don@gramps-project.org>
	* src/ManagedWindow.py: added
	* src/DisplayState.py: break out managed window stuff
	* src/Editors/_EditPrimary.py: use ManagedWindow
	* src/Editors/_EditSecondary.py: use ManagedWindow
	* src/Editors/_EditReference.py: use ManagedWindow
	* src/ObjectSelector/_ObjectSelectorWindow.py: use ManagedWindow
	* src/PluginUtils/_Plugins.py: use ManagedWindow
	* src/GrampsDb/_GrampsDbBase.py: handle saving of custom 
	attributes and event types for use in menus
	* src/Editors/_EditAttribute.py: support for family vs. person
	* src/Editors/_EditEventRef.py: support for family vs. person